Temp disable projects pages, add year to post URLs

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:
 
 # Jekyll configuration
 
-permalink:   /:categories/:title/
+permalink:   /:categories/:year/:title/
 markdown:    kramdown
 highlighter: rouge
 sass:
