--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@
 - title: About
   url: /
 
-- title: Projects
-  url: /projects/
+#- title: Projects
+#  url: /projects/
 
 - title: Blog
   url: /blog/
