Add utils dir and commit todo.txt

--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,10 @@
 # Site wide configuration
 
-title:            M&#x36b;E&#x363;S&#x36d;H&#x36d;ULAM
+title:            "mͫeͣsͭʜͭulam"
 
 locale:           en_US
 #url:              /website
 #baseurl:          /website
-
-# unicode:
-# 
-# &#x363; superscript a
-# &#x36b; superscript m
-# &#x36d; superscript t
-# &#x307; superscript dot
 
 # Jekyll configuration
 
