--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
-  - title: Home
+  - title: home
     url: /
 
   #- title: Projects
   #  url: /projects
 
-  - title: Blog
+  - title: blog
     url: /blog/
