--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ breadcrumbs              : false # true, false (default)
 collections:
   projects:
     output: true
-    permalink: /:collection/:path/
+    permalink: /:collection/:title/
 
 defaults:
   # _posts
@@ -37,7 +37,7 @@ defaults:
       read_time: false
       comments: false
       share: true
-      related: true
+      related: false
 
   # _projects
   - scope:
@@ -45,7 +45,7 @@ defaults:
       type: projects
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       share: true
 
 ###### End MM added ######
