--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: home
     url: /
 
-  #- title: Projects
-  #  url: /projects
+  - title: projects
+    url: /projects/
 
   - title: blog
     url: /blog/
